[package]
authors = ["i@k4yt3x.com"]
categories = ["command-line-utilities"]
description = "Source code for the Telegram channel @KonachanPopular"
edition = "2021"
homepage = "https://github.com/k4yt3x/konachan-popular-rust"
keywords = ["konachan", "moebooru", "telegram"]
license = "GPL-2.0-only"
name = "konachan-popular"
readme = "README.md"
repository = "https://github.com/k4yt3x/konachan-popular-rust"
version = "1.2.3"

[[bin]]
name = "konachan-popular"
path = "src/main.rs"

[profile.dev]
opt-level = 3

[profile.release]
strip = "symbols"

[dependencies]
anyhow = "1.0"
chrono = "0.4"
clap = { version = "4.0", features = ["derive", "env"] }
openssl = { version = "0.10", features = ["vendored"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
slog = "2.7"
slog-term = "2.9"
teloxide = { version = "0.11", features = ["macros", "throttle"] }
tokio = { version = "1.23", features = ["full"] }
